@@ -1,3 +1,10 @@
+Thu Apr 24 23:17:25 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* lib/fileutils.rb (fu_get_uid, fu_get_gid): Etc.getpwnam/getgrnam may
+	  returns nil.
+
+	* lib/webrick/utils.rb (su): ditto.
+
 Thu Apr 24 22:55:22 2014  Tanaka Akira  <akr@fsij.org>
 
 	* bootstraptest/test_io.rb: Add etc.so to $" before require 'tmpdir'.
